<resources>
	
	<!-- Project level resources -->
	<string name="app_name">MiowliMiowli</string>
	
	<!-- WelcomeActivity -->
	<string name="welcome_activity_title"></string>
	<string name="welcome_activity_titlechinese_text_view_text">喵哩喵哩新闻</string>
	<string name="welcome_activity_miowlimiowli_news_app_text_view_text">Miowlimiowli News App</string>
	<string name="welcome_activity_sign_up_button_text">注册</string>
	<string name="welcome_activity_log_in_button_text">登陆</string>
	<string name="welcome_activity_littleredgrey_studio_text_view_text">© 2019 LittleRedGrey Studio</string>
	
	<!-- LoginActivity -->
	<string name="login_activity_title"></string>
	<string name="login_activity_log_in_text_view_text">登陆</string>
	<string name="login_activity_welcome_back_text_view_text">Welcome back.\nMiowlimiowli awaits you.</string>
	<string name="login_activity_input_nickname_edit_text_hint">Your nickname</string>
	<string name="login_activity_input_password_edit_text_hint">Your password</string>
	<string name="login_activity_login_button_text">登陆</string>
	<string name="login_activity_forgot_your_password_button_text">忘记密码？</string>
	
	<!-- SignupActivity -->
	<string name="signup_activity_title"></string>
	<string name="signup_activity_sign_up_text_view_text">注册</string>
	<string name="signup_activity_welcome_text_view_text">Welcome, friend!</string>
	<string name="signup_activity_signup_nickname_edit_text_hint">Your nickname</string>
	<string name="signup_activity_signup_space_edit_text_hint">Your mail</string>
	<string name="signup_activity_signup_password_edit_text_hint">Password (6+ characters)</string>
	<string name="signup_activity_i_agree_with_interga_text_view_text">I agree with intergalatic terms and conditions</string>
	<string name="signup_activity_sign_up_button_text">注册</string>
	<string name="signup_activity_already_gave_up_your_text_view_text">已有账号？</string>
	<string name="signup_activity_log_in_button_text">登陆</string>
	
	<!-- RecommandActivity -->
	<string name="recommand_activity_title"></string>
	<string name="recommand_activity_menu_item_title">新闻推荐</string>
	<string name="cell_view_holder_news_title_text_view_text">意大利记者问邓小平：天安门上毛主席像是否永远保留</string>
	<string name="cell_view_holder_news_time_text_view_text">中国网文化	317评论	2019-8-24</string>
	<string name="cell_view_holder_news_parent_button_text"></string>
	<string name="advertisement_view_holder_ad_title_text_view_text">Spray and Pray</string>
	<string name="advertisement_view_holder_ad_detail_text_view_text">Hull tattoos? A new trend to follow in 2050</string>
	<string name="advertisement_view_holder_ad_time_text_view_text">Sponsored content</string>
	<string name="recommand_activity_news_search_bar_search_view_hint">搜索新闻</string>
	
	<!-- ProfileActivity -->
	<string name="profile_activity_title"></string>
	<string name="profile_activity_menu_item_title">个人信息</string>
	<string name="profile_activity_my_nickname_text_view_text">喵喵喵</string>
	<string name="profile_activity_my_title_text_view_text">北京市某理工大学</string>
	<string name="profile_activity_my_introduction_text_view_text">旅行家，文艺爱好者。喜欢音乐，诗歌，绘画。\n享受醉人的下午茶时光，</string>
	<string name="profile_activity_collect_sum_text_view_text">365</string>
	<string name="profile_activity_clooection_button_text">收藏</string>
	<string name="profile_activity_comment_sum_text_view_text">58k</string>
	<string name="profile_activity_comment_button_text">评论</string>
	<string name="profile_activity_brouse_sum_text_view_text">326</string>
	<string name="profile_activity_brouser_button_text">最近浏览</string>
	<string name="profile_activity_settings_button_text"></string>
	
	<!-- CommentActivity -->
	<string name="comment_activity_title"></string>
	<string name="comment_activity_menu_item_title">Item</string>
	<string name="comment_activity_collection_tab_bar_item_one_text">收藏</string>
	<string name="comment_activity_collection_tab_bar_item_two_text">评论</string>
	<string name="comment_activity_collection_tab_bar_item_three_text">点赞</string>
	<string name="comment_activity_collection_tab_bar_item_four_text">历史</string>
	<string name="news_view_holder_title_text_view_text">意大利记者问邓小平：天安门上毛主席像是否永远保留</string>
	<string name="news_view_holder_time_text_view_text">中国网文化	317评论	2019-8-24</string>
	<string name="advertisement_two_view_holder_pinktext_text_view_text">Spray and Pray</string>
	<string name="advertisement_two_view_holder_blacktext_text_view_text">Hull tattoos? A new trend to follow in 2050</string>
	<string name="advertisement_two_view_holder_greytext_text_view_text">Sponsored content</string>
	
	<!-- SettingsActivity -->
	<string name="settings_activity_title"></string>
	<string name="settings_activity_menu_item_title">Profile</string>
	<string name="settings_activity_details_text_view_text">DETAILS</string>
	<string name="settings_activity_nickname_text_view_text">昵称</string>
	<string name="settings_activity_my_name_button_text">Dr. Where</string>
	<string name="settings_activity_mail_text_view_text">邮箱</string>
	<string name="settings_activity_mymail_button_text">tardis~spacemail.io</string>
	<string name="settings_activity_clearcache_button_text">清除缓存</string>
	<string name="settings_activity_cache_button_text">51.2M</string>
	<string name="settings_activity_nopicture_text_view_text">省流量模式</string>
	<string name="settings_activity_darkmode_text_view_text">夜间模式</string>
	<string name="settings_activity_label_text_view_text">会员免广告</string>
	<string name="settings_activity_vip_button_text">办理</string>
	<string name="settings_activity_vip_button_sheet_title">办理会员？</string>
	<string name="settings_activity_vip_button_sheet_item_one_text">确认</string>
	<string name="settings_activity_vip_button_sheet_item_two_text">取消</string>
	<string name="settings_activity_logged_as_text_view_text">Logged as</string>
	<string name="settings_activity_loggedname_text_view_text">Dr. Where</string>
	<string name="settings_activity_logout_button_text">Log out</string>
	<string name="settings_activity_information_text_view_text">INFORMATION</string>
	
	<!-- ListActivity -->
	<string name="list_activity_title"></string>
	<string name="list_activity_menu_item_title">新闻列表</string>
	<string name="list_activity_news_type_tab_bar_item_one_text">体育</string>
	<string name="list_activity_news_type_tab_bar_item_two_text">文化</string>
	<string name="list_activity_news_type_tab_bar_item_three_text">政治</string>
	<string name="list_activity_news_type_tab_bar_item_four_text">军事</string>
	<string name="list_activity_more_type_button_text"></string>
	<string name="news_two_view_holder_news_title_text_view_text">意大利记者问邓小平：天安门上毛主席像是否永远保留</string>
	<string name="news_two_view_holder_news_time_text_view_text">中国网文化	317评论	2019-8-24</string>
	<string name="news_two_view_holder_news_parent_button_text"></string>
	<string name="advertisement_three_view_holder_ad_title_text_view_text">Spray and Pray</string>
	<string name="advertisement_three_view_holder_ad_detail_text_view_text">Hull tattoos? A new trend to follow in 2050</string>
	<string name="advertisement_three_view_holder_ad_time_text_view_text">Sponsored content</string>
	<string name="list_activity_news_search_bar_search_view_hint">搜索新闻</string>
	
	<!-- NewsdetailActivity -->
	<string name="newsdetail_activity_title"></string>
	<string name="newsdetail_activity_write_comment_search_view_hint">写评论...</string>
	<string name="newsdetail_activity_share_button_text"></string>
	<string name="newsdetail_activity_star_button_text"></string>
	<string name="newsdetail_activity_collect_button_text"></string>
	<string name="newsdetail_activity_title_text_view_text">Guess who’s back?</string>
	<string name="newsdetail_activity_content_text_view_text">Happening in 20h, Bajkonur</string>
	<string name="newsdetail_activity_time_text_view_text">Event posted by Laika</string>
	<string name="newsdetail_activity_comment_name_text_view_text">Spray and Pray</string>
	<string name="newsdetail_activity_comment_content_text_view_text">Hull tattoos? A new trend to follow in 2050</string>
	<string name="newsdetail_activity_comment_time_text_view_text">Sponsored content</string>
	
	<!-- TwoActivity -->
	<string name="two_activity_title"></string>
</resources>